--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage":"http://shivaharigundeti.github.io/",
+  "homepage":".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
