--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage":".",
+  "homepage":"https://shivaharisonu.github.io/react-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
